--- a/css/portrait.css
+++ b/css/portrait.css
@@ -23,31 +23,34 @@
 	font-size: 9vh;
 	text-align: center;
 }
+#level {
+	font-size: 4vh;
+}
 #play-stop-button {
 	top: 2vh;
 	right: 2vh;
 }
 #eye, #ear {
-    font-size: 5vh;
+        font-size: 5vh;
     text-align: center;
-    width: 49.6vw;
+    width: 49.5vw;
     line-height: 100%;
     background: #333;
     color: #111;
     position: absolute;
     bottom: 0;
     padding: 3vh 0;
-    border: 0.1vw solid transparent;
+    border: 0.1vw solid #000;
 }
 #eye {
 	right: 0px;
     border-top-left-radius: 4px;
-    border-width: 0.1vw 0 0 0.1vw;
+    border-width: 0 0 0 .25vw;
 }
 #ear {
 	left: 0;
     border-top-right-radius: 4px;
-    border-width: 0.1vw 0.1vw 0 0;
+    border-width: 0 .25vw 0 0;
 }
 #eye:before {
   content: "Visual";
