--- a/css/portrait.css
+++ b/css/portrait.css
@@ -43,12 +43,12 @@
     border: 0.1vw solid #000;
 }
 #eye {
-	right: 0px;
+	left: 0;
     border-top-left-radius: 4px;
     border-width: 0 0 0 .25vw;
 }
 #ear {
-	left: 0;
+	right: 0;
     border-top-right-radius: 4px;
     border-width: 0 .25vw 0 0;
 }
