--- a/css/common.css
+++ b/css/common.css
@@ -141,13 +141,13 @@ input[type=range].slider:focus::-webkit-slider-runnable-track {
     border-radius: 4px;
 }
 .right {
-	background: #0e3e22!important;
+	background: #16a085!important;
 }
 .missed {
-	background: radial-gradient(rgba(255, 165, 0, .20) 1%, rgba(0, 0, 0, 0) 99%)!important;
+	background: #f39c12!important;
 }
 .wrong {
-	background: #3e130e!important;
+	background: #d35400!important;
 }
 @keyframes rotating-clockwise {
   from {
