--- a/css/common.css
+++ b/css/common.css
@@ -1,7 +1,7 @@
+::-webkit-scrollbar{display:none}
 body *{user-select:none;-moz-user-select:none;-khtml-user-select:none;-webkit-user-select:none;-o-user-select:none;font-family:monospace}
 body{overflow:hidden;position:fixed;margin:0;height:100vh;background:#000}
-::-webkit-scrollbar{display:none}
-button:focus{outline:0!important}
+input:focus, button:focus{outline:0!important}
 #status-bar * {
 	color: #222;
 }
@@ -15,10 +15,10 @@ button:focus{outline:0!important}
 	width: 100%;
 	margin: auto;
 }
-#level {
+#N-level {
     text-align: center;
 }
-.site-wrap {
+#site-wrap {
 	min-width: 100vw;
 	min-height: 100vh;
 	background: #000;
@@ -28,7 +28,7 @@ button:focus{outline:0!important}
 	left: 0;
 	z-index: 1;
 }
-.nav-trigger {
+#nav-trigger {
 	position: absolute;
 	clip: rect(0, 0, 0, 0);
 }
@@ -40,8 +40,72 @@ label[for="nav-trigger"] {
 	background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' x='0px' y='0px' width='30px' height='30px' viewBox='0 0 30 30' enable-background='new 0 0 30 30' xml:space='preserve'><rect fill='#333' width='30' height='6'/><rect fill='#333' y='24' width='30' height='6'/><rect fill='#333' y='12' width='30' height='6'/></svg>");
 	background-size: contain;
 }
-.on {
-	background: #fff!important;
+#navigation {
+	margin: 0;
+	list-style: none;
+	background: #222;
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	z-index: 0;
+	overflow-y: scroll;
+}
+.nav-item input, .nav-item select {
+	margin: 8px 0;
+}
+.nav-item p {
+	margin: 12px 0;
+}
+.btn-standard {
+	position: absolute;
+    background: #222;
+    color: #000;
+    z-index: 10;
+    border: 0;
+    border-radius: 4px;
+}
+.btn-standard:disabled {
+	background: #111;
+}
+.btn-popup {
+	position: absolute;
+	line-height: 100%;
+	padding: 0;
+	border: 0;
+    background: transparent;
+    color: #fff;
+    border-radius: 4px;
+}
+.btn-popup.reflected {
+	color: #4d4100;
+}
+input[type=range].slider {
+	-webkit-appearance: none;
+	padding: 0;
+}
+input[type=range].slider:focus {
+	outline: none;
+}
+input[type=range].slider::-webkit-slider-runnable-track {
+	width: 100%;
+	cursor: pointer;
+	background: #fff;
+	border-radius: 4px;
+	border: 0px solid #010101;
+}
+input[type=range].slider::-webkit-slider-thumb {
+	border: 0px solid #ff1e00;
+	border-radius: 0px;
+	background: #666;
+	cursor: pointer;
+	-webkit-appearance: none;
+}
+input[type=range].slider:focus::-webkit-slider-runnable-track {
+	background: #ff0;
 }
 .pop {
 	position: absolute;
@@ -98,75 +162,8 @@ label[for="nav-trigger"] {
 .ct-series-c .ct-point {
   stroke: red;
 }
-input:focus {
-	outline: 0;
-}
-input[type=range].slider {
-	-webkit-appearance: none;
-	padding: 0;
-}
-input[type=range].slider:focus {
-	outline: none;
-}
-input[type=range].slider::-webkit-slider-runnable-track {
-	width: 100%;
-	cursor: pointer;
-	background: #fff;
-	border-radius: 4px;
-	border: 0px solid #010101;
-}
-input[type=range].slider::-webkit-slider-thumb {
-	border: 0px solid #ff1e00;
-	border-radius: 0px;
-	background: #666;
-	cursor: pointer;
-	-webkit-appearance: none;
-}
-input[type=range].slider:focus::-webkit-slider-runnable-track {
-	background: #ff0;
-}
-.navigation {
-	margin: 0;
-	list-style: none;
-	background: #222;
-	width: 100%;
-	height: 100%;
-	position: fixed;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	z-index: 0;
-	overflow-y: scroll;
-}
-.nav-item input, .nav-item select {
-	margin: 8px 0;
-}
-.nav-item p {
-	margin: 12px 0;
-}
-.btn-standard {
-	position: absolute;
-    background: #222;
-    color: #000;
-    z-index: 10;
-    border: 0;
-    border-radius: 4px;
-}
-.btn-standard:disabled {
-	background: #111;
-}
-.btn-popup {
-	position: absolute;
-	line-height: 100%;
-	padding: 0;
-	border: 0;
-    background: transparent;
-    color: #fff;
-    border-radius: 4px;
-}
-.btn-popup.reflected {
-	color: #4d4100;
+.on {
+	background: #fff!important;
 }
 .right {
 	background: #0c5a4a!important;
