--- a/css/landscape.css
+++ b/css/landscape.css
@@ -20,10 +20,10 @@
     line-height: 100%;
     font-size: 10vh;
 }
-#level {
+#N-level {
 	font-size: 6vh;
 }
-#left {
+#left-stimuli {
     bottom: 4vh;
     right: 4vh;
 }
@@ -31,7 +31,7 @@
 	bottom: 4vh;
 	left: 4vh;
 }
-#eye, #ear {
+#eye-btn, #ear-btn {
     font-size: 7vh;
     text-align: center;
     height: 10vh;
@@ -42,20 +42,20 @@
     transform: translateY(-50%);
     padding: 20vh 4vw;
 }
-#eye {
+#eye-btn {
 	left: 0;
 	border-top-right-radius: 4px;
 	border-bottom-right-radius: 4px;
 }
-#ear {
+#ear-btn {
 	right: 0;
 	border-top-left-radius: 4px;
 	border-bottom-left-radius: 4px;
 }
-#eye:before {
+#eye-btn:before {
   content: "A";
 }
-#ear:before {
+#ear-btn:before {
   content: "L";
 }
 .pop {
@@ -89,7 +89,7 @@
     top: 4vh;
     right: 4vh;
 }
-.navigation {
+#navigation {
 	padding: 4vh;
 }
 label[for="nav-trigger"] {
@@ -98,13 +98,13 @@ label[for="nav-trigger"] {
 	width: 10vh;
 	height: 10vh;
 }
-.nav-trigger:checked + label {
+#nav-trigger:checked + label {
 	left: 67vh;
 }
-.nav-trigger:checked ~ .site-wrap {
+#nav-trigger:checked ~ #site-wrap {
 	left: 63vh;
 }
-.nav-trigger + label, .site-wrap {
+#nav-trigger + label, #site-wrap {
 	transition: left 0.2s;
 }
 .nav-item label, .nav-item p, .nav-item span.range-label  {
@@ -142,10 +142,10 @@ input[type=range].slider::-webkit-slider-thumb {
 		color: #000;
 		background: #111;
 	}
-	.nav-trigger:checked + label {
+	#nav-trigger:checked + label {
 		left: 35vh;
 	}
-	.nav-trigger:checked ~ .site-wrap {
+	#nav-trigger:checked ~ #site-wrap {
 		left: 31vh;
 	}
 	.nav-item label, .nav-item p, .nav-item span.range-label{
