--- a/css/landscape.css
+++ b/css/landscape.css
@@ -2,6 +2,10 @@
 	height: 100vh;
 	width: 100vh;
 }
+.dot {
+    width: 2vh!important;
+    height: 2vh!important;
+}
 .rotational-grid {
 	height: 70vh!important;
 	width: 70vh!important;
@@ -86,6 +90,9 @@
 #navigation {
 	padding: 4vh;
 }
+.nav-item input, .nav-item select {
+	margin-bottom: 32px;
+}
 label[for="nav-trigger"] {
 	top: 4vh;
 	left: 4vh;
@@ -135,6 +142,9 @@ input[type=range].slider::-webkit-slider-thumb {
 	.btn-standard[disabled]:hover {
 		color: #000;
 		background: #111;
+	}
+	.nav-item input, .nav-item select {
+		margin-bottom: 8px;
 	}
 	#nav-trigger:checked + label {
 		left: 35vh;
