--- a/css/portrait.css
+++ b/css/portrait.css
@@ -35,6 +35,7 @@
     line-height: 100%;
     background: rgba(0, 0, 0, 0.5);
     color: rgba(255, 255, 255, 0.75);
+	border: 1px solid rgba(255, 255, 255, 0.1);
     position: absolute;
     bottom: 0;
     padding: 3vh 0;
