--- a/css/common.css
+++ b/css/common.css
@@ -32,7 +32,7 @@ input:focus, button:focus{outline:0!important}
 }
 .dot {
 	border-radius: 50%;
-    background: #333;
+    background: rgba(255, 0, 153, 0.5);
 }
 #N-level {
     text-align: center;
