--- a/css/portrait.css
+++ b/css/portrait.css
@@ -24,6 +24,26 @@
 #N-level {
 	font-size: 4vh;
 }
+@keyframes blur {
+  0% {
+    filter: blur(0.2vw);
+  }
+  40% {
+    filter: blur(0.2vw);
+  }
+  42% {
+    filter: blur(0);
+  }
+  44% {
+    filter: blur(0.4vw);
+  }
+  46% {
+    filter: blur(0.2vw);
+  }
+  100% {
+    filter: blur(0.2vw);
+  }
+}
 #engine-button {
 	top: 2vh;
 	right: 2vh;
