--- a/css/portrait.css
+++ b/css/portrait.css
@@ -11,7 +11,7 @@
 	width: 70vw!important;
 }
 #grid td {
-	border: 1vw solid rgba(0, 0, 0, 0.5);
+	border: 1vw solid rgba(128, 128, 128, 0.1);
 }
 #status-bar {
 	padding-top: 2vh;
@@ -63,12 +63,12 @@
 #eye-btn {
 	left: 0;
     border-top-right-radius: 4px;
-    border-width: 0 .25vw 0 0;
+    border-width: 1px;
 }
 #ear-btn {
 	right: 0;
 	border-top-left-radius: 4px;
-    border-width: 0 0 0 .25vw; 
+    border-width: 1px; 
 }
 #eye-btn:before {
   content: "Visual";
