--- a/css/portrait.css
+++ b/css/portrait.css
@@ -56,7 +56,7 @@
     background: rgba(0, 0, 0, 0.5);
     color: rgba(255, 255, 255, 0.75);
 	border: 1px solid rgba(255, 255, 255, 0.1);
-    position: absolute;
+    position: fixed;
     bottom: 0;
     padding: 3vh 0;
 }
