--- a/css/common.css
+++ b/css/common.css
@@ -159,9 +159,9 @@ label[for="nav-trigger"] {
   line-height: 100%;
   padding: 0;
   border: 0;
-  background: transparent;
+  background: rgba(255, 255, 255, 0.5);
   color: white;
-  border-radius: 4px;
+  border-radius: 50%;
 }
 
 .btn-popup.reflected {
