--- a/css/common.css
+++ b/css/common.css
@@ -161,7 +161,7 @@ label[for="nav-trigger"] {
   border: 0;
   background: rgba(255, 255, 255, 0.5);
   color: white;
-  border-radius: 50%;
+  text-shadow: 0px 0px 5px white;
 }
 
 .btn-popup.reflected {
