--- a/v2/css/portrait.css
+++ b/v2/css/portrait.css
@@ -23,7 +23,7 @@
 }
 
 #eye-btn {
-  position: fixed;
+  position: absolute;
   font-size: 5vh;
   width: 49.5vw;
   height: 15vh;
@@ -33,7 +33,7 @@
 
 #ear-left-btn,
 #ear-right-btn {
-  position: fixed;
+  position: absolute;
   font-size: 5vh;
   width: 49.5vw;
   height: 7.25vh;
@@ -57,6 +57,7 @@
 #ear-left-btn {
   right: 0;
   border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
   border-width: 1px;
 }
 
